# Fil_rouge_architecture

./: .coverage  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 4d9d63d95a34_create_users_table.py  72dad795d7d0_add_notifications_table.py  893f969068d4_add_books_table.py  a217579f494e_add_manuscripts_tables.py  a5f8fb43b1c3_add_editorial_dossiers_table.py
app/: main.py
app/application/use_cases/: get_me_use_case.py  login_use_case.py  register_use_case.py
app/domain/entities/: book.py  book_builder.py  chapter.py  editorial_dossier.py  manuscript.py  manuscript_version.py  notification.py  user.py
app/domain/ports/: notification_port.py
app/domain/repositories/: book_repository.py  editorial_dossier_repository.py  manuscript_repository.py  notification_repository.py  user_repository.py
app/infrastructure/: database.py  models.py
app/presentation/: auth_controller.py  auth_dependencies.py  auth_routes.py  editorial_controller.py  editorial_schemas.py  manuscript_controller.py  manuscript_schemas.py  notification_controller.py  notification_schemas.py  publication_controller.py  publication_schemas.py
tests/: conftest.py  fakes.py  test_book_builder.py  test_book_builder_errors.py  test_chapter.py  test_editorial_dossier.py  test_editorial_dossier_transitions.py  test_manuscript_state.py  test_notification_entity.py  test_notification_use_case.py  test_publish_manuscript_use_case.py  test_simple_use_cases.py  test_submit_manuscript_use_case.py
(+31 files in other folders)
